Fixing heading alignment for mobile

--- a/style.css
+++ b/style.css
@@ -66,9 +66,14 @@ body {
 
 
 h2 {
-    width: 80%; 
+    width: 40%; 
     margin-left: 6%;
-    font-size: 20px;
+    font-size: 36px;
+}
+
+h2.animated.slideInLeft {
+    width: 85%;
+    text-align: center;
 }
 
 #updatedButton{
@@ -118,12 +123,8 @@ ul a, a:visited{
     color: #FFF;
 }
 
-h2{
-    font-size: 36px;
-}
-
 #problem-info{
-    width: 65%;
+    width: 45%;
     margin-left: 6%;
 }
 
@@ -214,9 +215,6 @@ input:focus, textarea:focus {outline: none;}
 
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
-    #fp-nav {
-        display: none;
-    }
     #about{
         width: 80%;
         height: auto;
@@ -236,17 +234,33 @@ input:focus, textarea:focus {outline: none;}
       margin-top: -60px;
     }
     h2 {
-        width: 80%; 
+        width: 70%; 
         margin-left: 6%;
         padding: 3%;
-        font-size: 30px;
+        font-size: 32px;
         line-height: 36px;
+        padding-top: 100px;
+    }
+    h2.animated.slideInLeft {
+      width: 80%;
+      float: center;
+    }
+    h2.animated.bounceInUp {
+        text-align: right;
+        width: 80%;
+        padding-bottom: 0%;
     }
     .fp-tableCell h2 {
-      margin-top: -70px;
+      margin-top: 0px;
+      padding-top: 10%;
     }
     #problem-info p {
         margin-left: 6%;
+        font-size: 12px;
+    }
+    #problem-info {
+      width: 65%;
+
     }
     .solution-info {
       display: block;
@@ -262,6 +276,7 @@ input:focus, textarea:focus {outline: none;}
     .solution-info p {
       line-height: 15px;
       padding: 0px 15%;
+
     }
     #solution-outer {
       padding-bottom: 40px;
@@ -271,19 +286,19 @@ input:focus, textarea:focus {outline: none;}
       line-height: 22px;
     }
     #emailForm{
-        top: 0px;
-        width: 60%;
-        height: 40px;
-        border-radius: 10px;
-        font-size: 16px;
+      top: 0px;
+      width: 60%;
+      height: 40px;
+      border-radius: 10px;
+      font-size: 16px;
     }
 
     #submitButton{
-        top: 25px;
-        width: 60%;
-        height: 40px;
-        border-radius: 10px;
-        font-size: 16px;
+      top: 25px;
+      width: 60%;
+      height: 40px;
+      border-radius: 10px;
+      font-size: 16px;
     }
     #footer{
       bottom: 30px;
